@@ -1,9 +1,14 @@
 package ui.ending;
 
-import java.util.Arrays;
+import main.Main;
+
+import java.util.List;
 
 public class BadEnding extends Ending {
     public BadEnding() {
-        super("Bạn đã quá số lần thử cho phép!", 34, Arrays.asList("Chơi lại", "Chọn level khác"));
+        super("Bạn đã quá số lần thử cho phép!", 34, List.of(
+                new EndingAction("Chơi lại", Main.STATE::restartSudokuGame),
+                new EndingAction("Chọn level khác", Main.STATE::navigateToChooseLevel)
+        ));
     }
 }
